--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ h2{
 .form-mail{
     margin-left: 30px;
 }
-.form-mail input{
+.txtMail{
     border-color: gray;
     padding: 10px 20px 10px 25px;
     background-image: url(../images/envelope.svg);
@@ -163,7 +163,7 @@ h2{
     border-style: solid;
     margin-top: 5px;
 }
-.form-mail button{
+.enviarMail{
     display: block;
     margin-top: 10px;
     background: transparent;
@@ -174,7 +174,7 @@ h2{
     border-radius: 5px;
     cursor: pointer;
 }
-.form-mail button:hover{
+.enviarMail:hover{
     background-color: white;
     color: #026fff;
 }
@@ -237,6 +237,7 @@ h2{
         display: block;
         padding: 30px;
     }
+
     .social{
         display: flex;
         justify-content: space-evenly;
