--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,7 @@ h2{
     border-radius: 5px;
     border-style: solid;
     margin-top: 5px;
+    /* text-transform: lowercase; */
 }
 .enviarMail{
     display: block;
