--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 :root{
     --color-titulos: #026fff;
+    --fontf-title: 'Fjalla One', sans-serif;
 }
 *{
     padding: 0;
@@ -65,7 +66,7 @@
 }
 .hero h1{
     margin: 0.75em 0 0.75em 0.75em;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: var(--fontf-title);
     font-size: 40px;
     line-height: 1.5;
     letter-spacing: -.2px;
@@ -90,7 +91,7 @@
 }
 h2{
     color: var(--color-titulos);
-    font-family: 'Fjalla One', sans-serif;
+    font-family: var(--fontf-title);
     font-size: 30px;
     margin-left: 2em;
 }
@@ -116,7 +117,7 @@ h2{
 }
 .skills h3{
     color: var(--color-titulos);
-    font-family: 'Fjalla One', sans-serif;
+    font-family: var(--fontf-title);
     margin: 0.94em 3.75em;
 }
 .skills-second{
@@ -130,17 +131,16 @@ h2{
 /*--------------------Estilos projects------------------*/
 .projects{
     display: block;
-    /* justify-content: center;
-    flex-wrap: wrap;*/
     padding-top: 3.75em; 
     margin-left:10.625em;
 }
 .projects h2{
-    margin-left: 0;
+    margin-left: 1rem;
+    color: var(--color-titulos);
+    font-family: var(--fontf-title);
 }
 .project-item{
     width: 62.5em;
-    /* margin: 50px; */
     border: 2px solid rgba(0,0,0, 0.3);
     border-radius: 10px;
     background-color: white;
