--- a/css/styles.css
+++ b/css/styles.css
@@ -130,12 +130,14 @@ h2{
 }
 /*--------------------Estilos projects------------------*/
 .projects{
-    display: block;
-    padding-top: 3.75em; 
-    margin-left:10.625em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
 }
 .projects h2{
     margin-left: 1rem;
+    margin-bottom: .5rem;
     color: var(--color-titulos);
     font-family: var(--fontf-title);
 }
@@ -147,6 +149,7 @@ h2{
     display: flex;
     margin-bottom: 0.94em;
     align-items: center;
+    justify-content: space-around;
 }
 .project-detail{
     width: 31.25em;
@@ -178,11 +181,6 @@ h2{
     background-color: #026fff;
     color: white;
 }
-/* .project-item picture{
-    padding: 10px; 
-    border-radius: 250px; 
-    border:1px solid black;
-} */
 /*--------------------Estilos contact------------------*/
 .contact{
     background-color: #026fff;
@@ -206,6 +204,7 @@ h2{
     border-radius: 5px;
     border-style: solid;
     margin-top: 5px;
+    outline: none;
 }
 .enviarMail{
     display: block;
@@ -219,6 +218,7 @@ h2{
     cursor: pointer;
     font-family: 'Fjalla One', sans-serif;
     font-size: 16px;
+    outline: none;
 }
 .enviarMail:hover{
     background-color: white;
@@ -245,10 +245,7 @@ h2{
 @media screen and (max-width: 938px){
     .hero img{
         display: none;
-    }  
-    .project-item{
-        display: block
-    }  
+    }   
 }
 @media screen and (max-width: 768px){
     .menu{
@@ -278,23 +275,25 @@ h2{
         display: block;
         margin: auto;
     }
+    .skills-main img{
+        width: 100px;
+        height: 100px;
+    }
     .projects{
-        width: 90%;
-        margin-left: 0;
-    } 
+        max-width: 100%;
+    }
     .projects h2{
         margin-bottom: 10px;
     }
     .project-item{
-        display: block;
-        width: inherit;
-        text-align: center;
-        padding: 0;
-        margin-left: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 90%;
     }
     .project-detail{
-        width: 100%;
-        /*padding: 5px 2px;*/
+        width: 80%;
     }
     .project-description{
         width: 90%;
@@ -303,14 +302,13 @@ h2{
         display: block;
         padding: 30px;
     }
-
     .social{
         display: flex;
         justify-content: space-evenly;
-        
+        margin-bottom: 10px;
     }
     .social a{
-        margin-top: 10px;
+        margin: 10px 0;
     }
     
 }
